Fixes the nameplate stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,7 @@
 **/
 
 body {
-    /** Not using a reset/normalize, so clear the window margin in some browsers **/
-    margin: 0;
+    margin: 0; /** Not using a reset/normalize, so clear the window margin in some browsers **/
 }
 
 /* Header styling */
@@ -29,13 +28,15 @@ body {
 /* Name plate styling */
 .nameplate {
     background-color: #4aaaa5;
-    width: 250px;
+    overflow: hidden; /* Stretch/shrink the nameplate */
     height: 100px;
     float: left;
-    display: flex;
+    display: flex; /* Vertically and horizontally center the name */
     align-items: center;
 }
 .nameplate a {
+    margin-left: 20px;
+    margin-right: 20px;
     color: white;
     text-decoration: none;
 }
@@ -67,7 +68,6 @@ body {
 }
 
 /* Content Styling */
-
 .horizontal-rule-title {
     background-color: #777777;
     height: 2px;
@@ -89,7 +89,7 @@ body {
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
-.content h3, p {
+.content  p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 100;
     color: #777777;
@@ -107,8 +107,8 @@ body {
     height: 30px;
     border-top: 5px solid;
     border-top-color: #4aaaa5;
-    position: fixed;
-    bottom: 0;
+    position: fixed; /* Make the footer sticky */
+    bottom: 0; /* Keep the sticky footer on the bottom of the window if the content doesn't reach the bottom */
     left: 0;
     width: 100%;
     margin: 0 auto;
@@ -121,7 +121,6 @@ body {
     margin: 0 auto;
     margin-top: 10px;
 }
-
 .copyright {
     height: 30px;
     margin: 0 auto;
